# Projet_criminalite

./: README.md  pyproject.toml
data/processed/: crimes_sample.csv
notebooks/: README.md
tp4-safecity-opendata/: .gitignore  README.md  app.py
tp4-safecity-opendata/data/processed/: crimes_gendarmerie_2021.json
tp4-safecity-opendata/utils/: chatbot.py  geo.py
utils/: charts.py  data.py
